Configuração Vite para deploy na Hostinger

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="hero-mockup">
-                <img src="product-mockup.png" alt="E-book 150 Dinâmicas Práticas" id="product-mockup">
+                <img src="assets/img/product-mockup.png" alt="E-book 150 Dinâmicas Práticas" id="product-mockup">
             </div>
 
             <!-- Texto Descritivo -->
@@ -189,8 +189,8 @@
                 <div class="bonus-card-new">
                     <div class="bonus-image-wrapper">
                         <div class="bonus-number">1</div>
-                        <img src="bonus1.png" alt="Planner de Aulas de Educação Física" class="bonus-image-new"
-                            id="bonus1-img">
+                        <img src="assets/img/bonus1.png" alt="Planner de Aulas de Educação Física"
+                            class="bonus-image-new" id="bonus1-img">
                         <div class="bonus-image-title">Planner de Aulas de Educação Física</div>
                     </div>
                     <div class="bonus-content-new">
@@ -209,7 +209,8 @@
                 <div class="bonus-card-new">
                     <div class="bonus-image-wrapper">
                         <div class="bonus-number">2</div>
-                        <img src="bonus2.png" alt="Jogos Cooperativos" class="bonus-image-new" id="bonus2-img">
+                        <img src="assets/img/bonus2.png" alt="Jogos Cooperativos" class="bonus-image-new"
+                            id="bonus2-img">
                         <div class="bonus-image-title">Jogos Cooperativos</div>
                     </div>
                     <div class="bonus-content-new">
@@ -228,7 +229,7 @@
                 <div class="bonus-card-new">
                     <div class="bonus-image-wrapper">
                         <div class="bonus-number">3</div>
-                        <img src="bonus3.png" alt="Guia de Avaliação Simples (BNCC)" class="bonus-image-new"
+                        <img src="assets/img/bonus3.png" alt="Guia de Avaliação Simples (BNCC)" class="bonus-image-new"
                             id="bonus3-img">
                         <div class="bonus-image-title">Guia de Avaliação Simples (BNCC)</div>
                     </div>
@@ -307,9 +308,9 @@
 
                     <div class="plan-social-proof">
                         <div class="buyer-faces">
-                            <img src="avatar1.webp" alt="Professor" class="face">
-                            <img src="avatar2.jpg" alt="Professor" class="face">
-                            <img src="avatar3.jpg" alt="Professor" class="face">
+                            <img src="assets/img/avatar1.webp" alt="Professor" class="face">
+                            <img src="assets/img/avatar2.jpg" alt="Professor" class="face">
+                            <img src="assets/img/avatar3.jpg" alt="Professor" class="face">
                             <span class="plus-count">+1k</span>
                         </div>
                         <div class="social-text">
@@ -356,7 +357,7 @@
 
             <div class="testimonials-grid">
                 <div class="testimonial-card">
-                    <img src="avatar1.webp" alt="Mariana Lopes" class="testimonial-avatar" id="avatar1">
+                    <img src="assets/img/avatar1.webp" alt="Mariana Lopes" class="testimonial-avatar" id="avatar1">
                     <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
                     <p class="testimonial-text">
                         "Esse material mudou completamente minhas aulas! Agora tenho atividades variadas e meus alunos
@@ -366,7 +367,7 @@
                 </div>
 
                 <div class="testimonial-card">
-                    <img src="avatar2.jpg" alt="Carlos Henrique" class="testimonial-avatar" id="avatar2">
+                    <img src="assets/img/avatar2.jpg" alt="Carlos Henrique" class="testimonial-avatar" id="avatar2">
                     <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
                     <p class="testimonial-text">
                         "O que mais gostei foi a praticidade! Tudo muito bem explicado e fácil de aplicar. Economizo
@@ -376,7 +377,7 @@
                 </div>
 
                 <div class="testimonial-card">
-                    <img src="avatar3.jpg" alt="Renata Alves" class="testimonial-avatar" id="avatar3">
+                    <img src="assets/img/avatar3.jpg" alt="Renata Alves" class="testimonial-avatar" id="avatar3">
                     <div class="testimonial-stars">⭐⭐⭐⭐⭐</div>
                     <p class="testimonial-text">
                         "Uso o material com alunos do fundamental e médio. As dinâmicas são adaptáveis e os resultados
@@ -395,7 +396,7 @@
 
             <div class="author-content-v2">
                 <div class="author-image-left">
-                    <img src="author.png" alt="Lucas Andrade" class="author-full-photo" id="author-img">
+                    <img src="assets/img/author.png" alt="Lucas Andrade" class="author-full-photo" id="author-img">
                 </div>
                 <div class="author-bio-v2">
                     <h3>Lucas Andrade</h3>
@@ -583,7 +584,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
