Vínculo do checkout do plano básico no modal

--- a/index.html
+++ b/index.html
@@ -618,7 +618,8 @@
                 Quero o Plano Premium por R$ 18,99
             </a>
 
-            <a href="#checkout-basic" class="modal-cta-secondary" onclick="closeOfferModal()">
+            <a href="https://checkout.dinamicasedf.com.br/VCCL1O8SCS8Q" class="modal-cta-secondary"
+                onclick="closeOfferModal()">
                 Quero o Plano básico por R$ 10,00
             </a>
         </div>
