Vínculo do checkout do plano premium 27,90

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         <p>🎁 BÔNUS: Dinâmicas para Chuva</p>
                     </div>
 
-                    <a href="#checkout" class="cta-plan-v2 featured">
+                    <a href="https://checkout.dinamicasedf.com.br/VCCL1O8SCS9A" class="cta-plan-v2 featured">
                         QUERO O PREMIUM!
                     </a>
                 </div>
