Vínculo do checkout de oferta especial 18,99 no modal

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                 <div class="modal-savings-tag">ECONOMIA: R$ 139,01</div>
             </div>
 
-            <a href="#checkout-premium-discount" class="modal-cta-main">
+            <a href="https://checkout.dinamicasedf.com.br/VCCL1O8SCS9E" class="modal-cta-main">
                 Quero o Plano Premium por R$ 18,99
             </a>
 
